# sealed-bid-sourcing

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
decisions/: DEC-SBS-000-benchmark-shape.md  DEC-SBS-001-threat-model-scope.md  DEC-SBS-002-pyca-as-v0-crypto.md
docs/: first-pr.md  product-brief.md  system-map.md
paper/: leakage_bounds.yaml  refs.bib  sealed-bid-sourcing.tex
reports/: surplus_delta.jsonl  surplus_delta.md
runs/sealed_v0/: receipt.json
runs/unsealed_v0/: receipt.json
scenarios/: v0_10x5.json
schemas/: receipt.schema.json  scenario.schema.json
scripts/: validate_leakage_bound.py  validate_schemas.py  voice_lint.py
sealed_bid_sourcing/: __init__.py  cli.py  model.py  scoring.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/sealed_bid_sourcing/: __init__.py  cli.py
tests/: test_scenario_validates.py
