[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sealed-bid-sourcing"
version = "0.1.0"
description = "Reference benchmark and report tooling for sealed-bid reverse sourcing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AthenaTheOwl" }
]
dependencies = []

[project.scripts]
sealed-bid-sourcing = "sealed_bid_sourcing.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.22"
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["sealed_bid_sourcing"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
